update references to shuttle-secrets

--- a/examples/serenity.mdx
+++ b/examples/serenity.mdx
@@ -30,12 +30,12 @@ This example shows how to build a Serenity bot with Shuttle that responds to the
 
 <CodeGroup>
 ```rust src/main.rs
-use anyhow::anyhow;
+use anyhow::Context as _;
 use serenity::async_trait;
 use serenity::model::channel::Message;
 use serenity::model::gateway::Ready;
 use serenity::prelude::*;
-use shuttle_secrets::SecretStore;
+use shuttle_runtime::SecretStore;
 use tracing::{error, info};
 
 struct Bot;
@@ -57,14 +57,10 @@ impl EventHandler for Bot {
 
 #[shuttle_runtime::main]
 async fn serenity(
-    #[shuttle_secrets::Secrets] secret_store: SecretStore,
+    #[shuttle_runtime::Secrets] secrets: SecretStore,
 ) -> shuttle_serenity::ShuttleSerenity {
     // Get the discord token set in `Secrets.toml`
-    let token = if let Some(token) = secret_store.get("DISCORD_TOKEN") {
-        token
-    } else {
-        return Err(anyhow!("'DISCORD_TOKEN' was not found").into());
-    };
+    let token = secrets.get("DISCORD_TOKEN").context("'DISCORD_TOKEN' was not found")?;
 
     // Set gateway intents, which decides what events the bot will be notified about
     let intents = GatewayIntents::GUILD_MESSAGES | GatewayIntents::MESSAGE_CONTENT;
@@ -92,7 +88,6 @@ edition = "2021"
 anyhow = "1.0.66"
 serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
 shuttle-runtime = "0.42.0"
-shuttle-secrets = "0.42.0"
 shuttle-serenity = "0.42.0"
 tokio = "1.26.0"
 tracing = "0.1.37"
