--- a/migration/migrating-to-shuttle.mdx
+++ b/migration/migrating-to-shuttle.mdx
@@ -18,13 +18,7 @@ The first step is to add `shuttle-runtime` and `shuttle-axum` to your dependenci
 cargo add shuttle-runtime shuttle-axum
 ```
 
-Any [secrets](/resources/shuttle-secrets) you need to use will be kept in a `Secrets.toml` file (dev secrets to be held in `Secrets.dev.toml`) which will be placed at the `Cargo.toml` level - you'll want to use the `shuttle-secrets` crate to be able to use the new secrets:
-
-```bash
-cargo add shuttle-secrets
-```
-
-Your secrets file will look the same as your previous .env file, so you won't need to change anything.
+Any [secrets](/resources/shuttle-secrets) you need to use will be kept in a `Secrets.toml` file (dev secrets in `Secrets.dev.toml`) which will be placed at the `Cargo.toml` level.
 
 You can also easily get a provisioned database like so (this example will be for a provisioned PostgreSQL instance specifically):
 
@@ -33,14 +27,14 @@ cargo add shuttle-shared-db --features postgres
 ```
 
 If you have any database records you'd like to keep, it would be a good idea to export them so that they can be migrated to the new database.
-**You will not need a secrets file if you only need a provisioned Postgres database - this will be automatically be provisioned to you in the form of a SQLx connection.**
+**You will not need a secrets file if you only need a provisioned Postgres database - this will be automatically be provisioned and given to you in the form of a connection string or an sqlx pool.**
 
 ## Migrating your Code
 
 To be able to run your project on Shuttle, you need to make a few changes to your code.
 Instead of the `tokio::main` macro, you will use the `shuttle_runtime::main` macro and swap out `dotenvy` for Shuttle's Postgres annotation:
 
-This is what your `main.rs` file looks before:
+This is what your `main.rs` file looks like before:
 
 ```rust main.rs
 #[tokio::main]
@@ -72,7 +66,7 @@ And this is what it looks like after:
 #[shuttle_runtime::main]
 pub async fn axum (
     #[shuttle_shared_db::Postgres] pool: PgPool,
-    #[shuttle_secrets::Secrets] secrets: shuttle_secrets::SecretStore,
+    #[shuttle_runtime::Secrets] secrets: shuttle_runtime::SecretStore,
 ) -> shuttle_axum::ShuttleAxum {
     sqlx::migrate!()
         .run(&pool)
