--- a/getting-started/shuttle-commands.mdx
+++ b/getting-started/shuttle-commands.mdx
@@ -85,6 +85,7 @@ All project-related commands can use:
 - `cargo shuttle logs --latest`: Get all logs from the currently running deployment.
 - `cargo shuttle logs <id>`: Get all logs from a specific deployment.
 - `cargo shuttle logs --follow`: Stream logs of the deployed service and stream them to your terminal.
+- `cargo shuttle logs --raw`: Print the logs without timestamps and origin tags. The `--raw` flag is also available for the `run` and `deploy` commands.
 
 ### Manage resources
 
