--- a/resources/shuttle-shared-db.mdx
+++ b/resources/shuttle-shared-db.mdx
@@ -31,6 +31,9 @@ Depending on which type declaration is used as the output type in the macro, you
 |----------|--------------|------------------|-------------|
 | Postgres | | `String` | The connection string including username and password |
 | Postgres | `sqlx` (with rustls) or `sqlx-native-tls` | `sqlx::PgPool` | An sqlx connection pool with reasonable defaults |
+| Postgres | `diesel-async` | `diesel_async::AsyncPgConnection` | An async diesel connection with reasonable defaults |
+| Postgres | `diesel-async-bb8` | `diesel_bb8::Pool<diesel_async::AsyncPgConnection>` | A bb8 connection pool with reasonable defaults |
+| Postgres | `diesel-async-deadpool` | `diesel_deadpool::Pool<diesel_async::AsyncPgConnection>` | A deadpool connection pool with reasonable defaults |
 | MongoDB  | | `String` | The connection string including username and password |
 | MongoDB  | | `mongodb::Database` | A client pool connected to the database |
 
