--- a/examples/serenity-todo.mdx
+++ b/examples/serenity-todo.mdx
@@ -38,7 +38,7 @@ use serenity::model::application::{CommandDataOptionValue, CommandOptionType, In
 use serenity::model::gateway::Ready;
 use serenity::model::id::GuildId;
 use serenity::prelude::*;
-use shuttle_secrets::SecretStore;
+use shuttle_runtime::SecretStore;
 use sqlx::{Executor, PgPool};
 use tracing::{error, info};
 
@@ -158,7 +158,7 @@ impl EventHandler for Bot {
 #[shuttle_runtime::main]
 async fn serenity(
     #[shuttle_shared_db::Postgres] pool: PgPool,
-    #[shuttle_secrets::Secrets] secret_store: SecretStore,
+    #[shuttle_runtime::Secrets] secret_store: SecretStore,
 ) -> shuttle_serenity::ShuttleSerenity {
     // Get the discord token set in `Secrets.toml`
     let token = secret_store
@@ -269,10 +269,9 @@ edition = "2021"
 anyhow = "1.0.66"
 serde = "1.0.148"
 serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
-shuttle-runtime = "0.41.0"
-shuttle-secrets = "0.41.0"
-shuttle-serenity = "0.41.0"
-shuttle-shared-db = { version = "0.41.0", features = ["postgres", "sqlx"] }
+shuttle-runtime = "0.42.0"
+shuttle-serenity = "0.42.0"
+shuttle-shared-db = { version = "0.42.0", features = ["postgres", "sqlx"] }
 sqlx = "0.7.1"
 tokio = "1.26.0"
 tracing = "0.1.37"
