--- a/configuration/files.mdx
+++ b/configuration/files.mdx
@@ -42,7 +42,7 @@ assets = [
 You can double check which files are included in your deployment by turning on detailed logging:
 
 ```bash
-RUST_LOG=cargo_shuttle cargo shuttle deploy
+cargo shuttle --debug deploy
 ```
 
 ## Serving static files
