--- a/getting-started/shuttle-commands.mdx
+++ b/getting-started/shuttle-commands.mdx
@@ -41,6 +41,7 @@ cargo shuttle <COMMAND> --help
 
 These are some useful sequences of commands that are handy to keep in your back pocket.
 For full documentation, use `--help` on the respective command.
+Use the global `--debug` flag to print detailed debug output.
 
 ### Get started
 
