--- a/resources/shuttle-shared-db.mdx
+++ b/resources/shuttle-shared-db.mdx
@@ -87,25 +87,27 @@ the Docker engine.
 
 ## Example
 
-The Shuttle poem main function below uses the `#[shuttle_shared_db::Postgres]` attribute macro to provision a shared Postgres database,
-which can be accessed using a pre-configured, authenticated [sqlx Pool](https://docs.rs/sqlx/latest/sqlx/pool/index.html).
+The Shuttle main function below uses the `#[shuttle_shared_db::Postgres]` attribute macro to provision a shared Postgres database,
+which can be accessed with an [sqlx Pool](https://docs.rs/sqlx/latest/sqlx/pool/index.html).
 
 ```rust main.rs
 #[shuttle_runtime::main]
-async fn poem(
+async fn main(
     #[shuttle_shared_db::Postgres] pool: PgPool,
-) -> ShuttlePoem<impl poem::Endpoint> {
-    pool.execute(include_str!("../schema.sql"))
+) -> shuttle_axum::ShuttleAxum {
+    sqlx::migrate!()
+        .run(&pool)
         .await
-        .map_err(CustomError::new)?;
+        .expect("Failed to run migrations");
 
-    let app = Route::new()
-        .at("/todo", post(add))
-        .at("/todo/:id", get(retrieve))
-        .with(AddData::new(pool));
+    let state = MyState { pool };
+    let router = Router::new()
+        .route("/todos", post(add))
+        .route("/todos/:id", get(retrieve))
+        .with_state(state);
 
-    Ok(app.into())
+    Ok(router.into())
 }
 ```
 
-The full example can be found on [GitHub](https://github.com/shuttle-hq/shuttle-examples/tree/main/poem/postgres).
+The full example can be found on [GitHub](https://github.com/shuttle-hq/shuttle-examples/tree/main/axum/postgres).
