feat: copy updates

--- a/configuration/ci-cd.mdx
+++ b/configuration/ci-cd.mdx
@@ -1,6 +1,6 @@
 ---
-title: "CI/CD"
-description: "Tools for automating Shuttle deployments"
+title: "Rust CI/CD with Shuttle"
+description: "Streamline your Rust projects with Shuttle CI/CD. Get step-by-step instructions on setting up continuous integration and delivery in our docs."
 icon: "arrow-progress"
 ---
 
