--- a/introduction/welcome.mdx
+++ b/introduction/welcome.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Welcome"
-description: "Shuttle is a Rust-native cloud development platform that lets you deploy your Rust apps for free."
+title: "Welcome to Shuttle's Docs - Start Building Backends Fast"
+description: "Begin your Shuttle journey with our comprehensive documentation. Learn how Shuttle simplifies Rust cloud development through easy-to-follow guides."
 icon: "hand-wave"
 ---
 
