--- a/resources/shuttle-aws-rds.mdx
+++ b/resources/shuttle-aws-rds.mdx
@@ -1,5 +1,6 @@
 ---
-title: "Shuttle AWS RDS"
+title: "Integrate AWS RDS with Shuttle"
+description: "Seamlessly connect AWS RDS with your Rust applications on Shuttle. Our documentation shows you the steps to ensure robust database management."
 icon: "aws"
 ---
 
