--- a/resources/shuttle-persist.mdx
+++ b/resources/shuttle-persist.mdx
@@ -1,5 +1,6 @@
 ---
-title: "Shuttle Persist"
+title: "Persistent Storage in Shuttle"
+description: "Learn about Shuttle's persistent storage solutions for Rust applications. Our docs explain how to maintain data persistently and efficiently."
 icon: "database"
 ---
 
