--- a/resources/shuttle-qdrant.mdx
+++ b/resources/shuttle-qdrant.mdx
@@ -1,5 +1,6 @@
 ---
-title: "Shuttle Qdrant"
+title: "Utilize Shuttle Qdrant - Vector Search in Rust"
+description: "Integrate vector search capabilities into your Rust projects with Shuttle Qdrant. Our documentation outlines the process, simplifying your journey."
 icon: "database"
 ---
 
