refactor: mongo deprecation notice

--- a/resources/shuttle-shared-db.mdx
+++ b/resources/shuttle-shared-db.mdx
@@ -20,6 +20,8 @@ Each type of shareable database is behind its own feature flag and macro attribu
 | Postgres | `postgres`   | `shuttle_shared_db::Postgres` |
 | MongoDB  | `mongodb`    | `shuttle_shared_db::MongoDb`  |
 
+<Warning>We are planning to deprecate the MongoDB resource soon, with upcoming features to replace it.</Warning>
+
 ### Output type
 
 By default, you can get the connection string to the database and connect to it with your preferred library.
