--- a/resources/shuttle-shared-db.mdx
+++ b/resources/shuttle-shared-db.mdx
@@ -20,7 +20,7 @@ Each type of shareable database is behind its own feature flag and macro attribu
 | Postgres | `postgres`   | `shuttle_shared_db::Postgres` |
 | MongoDB  | `mongodb`    | `shuttle_shared_db::MongoDb`  |
 
-<Warning>We are planning to deprecate the MongoDB resource soon, with upcoming features to replace it.</Warning>
+<Warning>The MongoDB resource will be deprecated in the near future. If this resource is important to you, please open a [GitHub issue](https://github.com/shuttle-hq/shuttle/issues) detailing your use-case.</Warning>
 
 ### Output type
 
