refactor: mongo deprecation notice (#282)
---------

Co-authored-by: Oddbjørn Grødem <29732646+oddgrd@users.noreply.github.com>

--- a/resources/shuttle-shared-db.mdx
+++ b/resources/shuttle-shared-db.mdx
@@ -20,6 +20,8 @@ Each type of shareable database is behind its own feature flag and macro attribu
 | Postgres | `postgres`   | `shuttle_shared_db::Postgres` |
 | MongoDB  | `mongodb`    | `shuttle_shared_db::MongoDb`  |
 
+<Warning>The MongoDB resource will be deprecated in the near future. If this resource is important to you, please open a [GitHub issue](https://github.com/shuttle-hq/shuttle/issues) detailing your use-case.</Warning>
+
 ### Output type
 
 By default, you can get the connection string to the database and connect to it with your preferred library.
