--- a/examples/rocket-static-files.mdx
+++ b/examples/rocket-static-files.mdx
@@ -5,7 +5,7 @@ description: "This article walks you through setting up static files with Rocket
 
 ## Description
 
-This example has one route at `/` where the homepage is served and shows you how you can serve HTML or other types of files with Actix Web.
+This example has one route at `/` where the homepage is served and shows you how you can serve HTML or other types of files with Rocket.
 
 Note that static assets are declared in the `Shuttle.toml` file.
 
