--- a/configuration/project-structure.mdx
+++ b/configuration/project-structure.mdx
@@ -57,6 +57,21 @@ We intend to allow starting several Shuttle services at the same time, as part o
 The long term plan is to have one central service that routes to the other services in the project, sharing resources amongst them.
 Any feedback on what you would like to see in this area is most welcome.
 
+## Cargo feature flags
+
+Shuttle does not allow explicitly setting feature flags (yet), but instead activates the feature `shuttle` if it exists (along with disabling default features).
+
+```toml Cargo.toml
+# Compiling this package on Shuttle will enable the features
+# "shuttle" and "bar. To use default features on Shuttle, add
+# "default" to the shuttle array.
+[features]
+default = ["foo"]
+shuttle = ["bar"]
+foo = []
+bar = []
+```
+
 ## Multiple binaries
 
 If you want to keep your project structured for allowing both running with and without Shuttle, check out the [standalone-binary](https://github.com/shuttle-hq/shuttle-examples/tree/main/other/standalone-binary) example. This is great for gradually adding Shuttle into your project.
