--- a/configuration/project-structure.mdx
+++ b/configuration/project-structure.mdx
@@ -63,7 +63,7 @@ Shuttle does not allow explicitly setting feature flags (yet), but instead activ
 
 ```toml Cargo.toml
 # Compiling this package on Shuttle will enable the features
-# "shuttle" and "bar. To use default features on Shuttle, add
+# "shuttle" and "bar". To use default features on Shuttle, add
 # "default" to the shuttle array.
 [features]
 default = ["foo"]
