--- a/configuration/environment.mdx
+++ b/configuration/environment.mdx
@@ -41,7 +41,7 @@ Additionally, these tools are installed:
 ## Environment variables
 
 There are some environment variables set in the Shuttle container.
-Check for `SHUTTLE=true` or use [the shuttle feature flag](../project-structure#cargo-feature-flags) for custom behavior when running on Shuttle.
+Check for `SHUTTLE=true` or use [the shuttle feature flag](./project-structure#cargo-feature-flags) for custom behavior when running on Shuttle.
 
 ```bash
 SHUTTLE=true
