--- a/support/troubleshooting.mdx
+++ b/support/troubleshooting.mdx
@@ -9,6 +9,27 @@ This section is aimed at collecting common issues users have to provide quick de
   <Accordion title="I've updated Shuttle and my project isn't working anymore.">
     Make sure to follow all of the [upgrading steps](/configuration/shuttle-versions#upgrading-shuttle-version).
   </Accordion>
+  <Accordion title="I get os error 2 when trying to load up my project">
+    This is most likely to happen if you're using one of our shared database annotations. To prevent this from happening, ensure that Docker is running.
+
+    If you've installed Docker via Docker Desktop, you must ensure that Docker Desktop is running.
+    If you are using Podman, ensure Podman is running (and that your Docker socket has been set up correctly).
+  </Accordion>
+  <Accordion title="I get mismatched dependencies between one of my dependencies and Shuttle crate dependencies!">
+    This is likely because you are a using a different version of the dependency than the Shuttle crate, causing a dependency mismatch.
+
+    To fix this, there's a couple of options:
+    1) Switch the version of your crate over to the dependency. You can find the correct one either from the error itself, or going to Crates.io and checking the dependencies of the latest Shuttle crate version.
+    2) If you are unable to do the above because of nested dependencies, you can typically fork the crate's repo then upgrade the dependency yourself. However, depending on breaking changes this may be a non-trivial amount of work.
+  </Accordion>
+  <Accordion title="I get HTTP error code 600 while my project is in deployment">
+    This is most likely to happen if your project panics and crashes. Proper error handling should mitigate this, as well as logging to understand where your application is going wrong..
+
+    Instrumenting your application is a great way to get insight into panics/crashes. We also have [an article on using the Tracing libraries.](https://www.shuttle.rs/blog/2024/01/09/getting-started-tracing-rust)
+  </Accordion>
+  <Accordion title="I get 401 Unauthorised error while trying to use the CLI">
+    Try logging out and logging back in. If this still doesn't work, feel free to shoot us a message on [our Discord server!](https://discord.gg/shuttle)
+  </Accordion>
   <Accordion title="How can I return custom errors with Shuttle?">
     CustomError is an alias for `anyhow::Error`, the simplest way to output a relevant message here is by using `anyhow::Context` like this:
 
