--- a/migration/migrating-to-shuttle.mdx
+++ b/migration/migrating-to-shuttle.mdx
@@ -95,7 +95,7 @@ Now all you need to do is to run the following commands:
 
 ```bash
 cargo shuttle project start
-cargo shuttle project deploy
+cargo shuttle deploy
 ```
 
 Your project should now be deployed!
